--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -9,3 +9,5 @@ tree:
     entry: 72529e43-2d00-4f3a-a68f-010bf73ddde7
   -
     entry: 7a22aeb3-b06e-4101-a8a4-cd2578109105
+  -
+    entry: 34459d89-d1de-46a1-a503-61f491525c48
