add prod email to form destination

--- a/resources/forms/join.yaml
+++ b/resources/forms/join.yaml
@@ -4,3 +4,6 @@ email:
   -
     to: beck24@gmail.com
     subject: 'Re-Elect Greg Keller Join Form Submission'
+  -
+    to: electgregkeller@gmail.com.
+    subject: 'Re-Elect Greg Keller Join Form Submission'
