--- a/content/globals/global.yaml
+++ b/content/globals/global.yaml
@@ -2,3 +2,4 @@ title: Global
 data:
   seo_title: 'Re-elect Greg Keller For School District 68 Trustee'
   seo_description: 'Re-elect Greg Keller For School District 68 Trustee For Nanaimo, Ladysmith, Lantzville, Cedar, and District Families'
+  seo_image: images/share-image.png
