--- a/resources/forms/join.yaml
+++ b/resources/forms/join.yaml
@@ -5,5 +5,5 @@ email:
     to: beck24@gmail.com
     subject: 'Re-Elect Greg Keller Join Form Submission'
   -
-    to: electgregkeller@gmail.com.
+    to: electgregkeller@gmail.com
     subject: 'Re-Elect Greg Keller Join Form Submission'
