--- a/resources/blueprints/globals/global.yaml
+++ b/resources/blueprints/globals/global.yaml
@@ -7,3 +7,24 @@ sections:
     fields:
       -
         import: seo
+  head:
+    display: Head
+    fields:
+      -
+        handle: head_scripts
+        field:
+          theme: material
+          mode: htmlmixed
+          mode_selectable: false
+          indent_type: tabs
+          indent_size: 4
+          key_map: default
+          line_numbers: true
+          line_wrapping: true
+          display: 'Head Scripts'
+          type: code
+          icon: code
+          instructions: 'Anything included here will be injected into the HTML `head`, use for remote scripts, tracking stuff, or small css overrides'
+          listable: hidden
+          instructions_position: above
+          visibility: visible
