--- a/content/globals/global.yaml
+++ b/content/globals/global.yaml
@@ -2,5 +2,5 @@ title: Global
 data:
   seo_title: 'Re-elect Greg Keller For School District 68 Trustee'
   seo_description: 'Re-elect Greg Keller For School District 68 Trustee For Nanaimo, Ladysmith, Lantzville, Cedar, and District Families'
-  seo_image: images/share-image.png
+  seo_image: images/share.png
   head_scripts: '<meta name="facebook-domain-verification" content="t87v0wpzr19ymslutzz74mtmjc8udo" />'
