--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -66,6 +66,28 @@ sections:
                     listable: hidden
                     instructions_position: above
                     visibility: visible
+                    sets:
+                      embed_code:
+                        display: 'Embed Code'
+                        fields:
+                          -
+                            handle: embed_code
+                            field:
+                              theme: material
+                              mode: htmlmixed
+                              mode_selectable: false
+                              indent_type: tabs
+                              indent_size: 4
+                              key_map: default
+                              line_numbers: true
+                              line_wrapping: true
+                              display: 'Embed Code'
+                              type: code
+                              icon: code
+                              instructions: 'Ensure any code being placed here is trusted, it will be executed as-is with no protections.'
+                              listable: hidden
+                              instructions_position: above
+                              visibility: visible
                 -
                   handle: images
                   field:
